# fsdp_playground

./: README.md  data.py  dockerfile  fsdp_playground.ipynb  fsdp_playground.py  fsdp_playground_T5.py  fsdp_playground_default.py  fsdp_playground_spawn.py  pyproject.toml  summarization_dataset.py  train_val_scripts.py
configs/: config.yaml  config_old.yaml  t5.yaml
torchtune/: README.md  internal.yaml  llama13b.yaml  llama3b.yaml  llama8b.yaml  run_tune.sh
